--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,8 @@ main .item {
     margin-bottom: 50px;
     background-color: #f5f5f5;
     overflow: hidden;
+    position: relative;
+    padding-bottom: 20px;
 }
 
 main .item img {
@@ -96,9 +98,34 @@ main .item img:hover {
     transform: scale(1.05);
 }
 
-main h2, main p, main d {
+main h2, main p, main b {
     margin: 10px 20px;
     color: #333;
+}
+
+main b {
+    color:#5fa36a;
+    font-size: 40px;
+}
+
+main .add-to-cart {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    background: #ca5252;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    color: white;
+    border-radius: 50%;
+    cursor: pointer; 
+    font-weight: 600;  
+    transition: transform 500ms ease;
+}
+
+main .add-to-cart:hover {
+    transform: scale(1.5) translate(-5px);
 }
 
 footer {
