--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ body {
     margin: 50px auto;
 }
 
+header {
+    position: relative;
+}
+
 header .logo {
     font-weight: 600;
     font-size: 20px;
@@ -36,6 +40,31 @@ header ul.nav li {
 
 header ul.nav li:hover{
     opacity: 0.5;
+}
+
+header .shop-cart-button {
+    float: right;
+    cursor: pointer;
+    transition: color, transform 500ms ease;
+}
+
+header .shop-cart-button:hover, 
+header .shop-cart-button:active {
+    color: #dc3d3d;
+    transform: scale(1.5);
+}
+
+header .shop-cart {
+    position: absolute;
+    top: 30px;
+    right: 0;
+    width: 450px;
+    min-height: 100px;
+    background: #f7f7f7;
+    box-shadow: 32px -19px 16px -1px rgba(0,0,0,0.3);
+-webkit-box-shadow: 32px -19px 16px -1px rgba(0,0,0,0.3);
+-moz-box-shadow: 32px -19px 16px -1px rgba(0,0,0,0.3);
+z-index: 1000;
 }
 
 header .presentation {
