--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,32 @@ header .shop-cart {
 -webkit-box-shadow: 32px -19px 16px -1px rgba(0,0,0,0.3);
 -moz-box-shadow: 32px -19px 16px -1px rgba(0,0,0,0.3);
 z-index: 1000;
+
+padding: 20px;
+padding-bottom: 0;
+}
+
+header .shop-cart .item {
+    width: 100%;
+    float: left;
+    margin-bottom: 20px;
+
+}
+
+header .shop-cart .item img {
+    width: 70px;
+    float: left;
+    margin-right: 20px;
+}
+
+header .shop-cart .item h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+header .shop-cart .item p {
+    color: #797979;
+    font-weight: 600;
 }
 
 header .presentation {
