--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,11 @@ padding: 20px;
 padding-bottom: 0;
 }
 
+header .shop-cart .empty h2 {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
 header .shop-cart .item {
     width: 100%;
     float: left;
