--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ header .shop-cart {
     position: absolute;
     top: 30px;
     right: 0;
-    width: 450px;
+    width: 480px;
     min-height: 100px;
     background: #f7f7f7;
     box-shadow: 32px -19px 16px -1px rgba(0,0,0,0.3);
@@ -98,6 +98,20 @@ header .shop-cart .item p {
     font-weight: 600;
 }
 
+header .shop-cart .item .delete-icon {
+    color: #ca5252;
+    float: right;
+    position: relative;
+    top: -25px;
+    cursor: pointer;
+    transition: color, transform 500ms ease;
+}
+
+header .shop-cart .item .delete-icon:hover {
+    color: #b40000;
+    transform: scale(1.5);
+}
+
 header .presentation {
     margin: 50px 0;
     background: url("../img/pexels-maksim-goncharenok-4663421\ \(1\).jpg") no-repeat;
@@ -110,7 +124,7 @@ header .presentation {
     position: relative;
 }
 
-header .presentation::after {
+header .presentation:after {
     content: "Кроссовки";
     position: absolute;
     top: 100px;
@@ -121,7 +135,7 @@ header .presentation::after {
     color: #fff;
 }
 
-header .presentation::before {
+header .presentation:before {
     content: "по низким ценам";
     position: absolute;
     top: 200px;
@@ -130,6 +144,13 @@ header .presentation::before {
     font-size: 40px;
     font-weight: 400;
     color: #fff;
+}
+
+header .shop-cart .summa {
+    width: 100%;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 
 main {
